@@ -6,6 +6,7 @@
     using System.Text;
     using System.Collections;
 
+    [Serializable]
     public class DotExpression : IExpression
     {
         private IExpression expression;
