@@ -5,6 +5,7 @@
     using System.Linq;
     using System.Text;
 
+    [Serializable]
     public abstract class UnaryExpression : IExpression
     {
         private IExpression expression;
