@@ -18,6 +18,8 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AjSharp.Tests", "AjSharp.Te
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AjSharp.Console", "AjSharp.Console\AjSharp.Console.csproj", "{A4983D6C-8F15-4E87-B751-EDC9B9B7EB1A}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AjSharp.RunHost", "AjSharp.RunHost\AjSharp.RunHost.csproj", "{034845A2-0C7A-4655-8CBD-A40A927569E9}"
+EndProject
 Global
 	GlobalSection(TestCaseManagementSettings) = postSolution
 		CategoryFile = AjLanguage.vsmdi
@@ -47,6 +49,10 @@ Global
 		{A4983D6C-8F15-4E87-B751-EDC9B9B7EB1A}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{A4983D6C-8F15-4E87-B751-EDC9B9B7EB1A}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{A4983D6C-8F15-4E87-B751-EDC9B9B7EB1A}.Release|Any CPU.Build.0 = Release|Any CPU
+		{034845A2-0C7A-4655-8CBD-A40A927569E9}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{034845A2-0C7A-4655-8CBD-A40A927569E9}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{034845A2-0C7A-4655-8CBD-A40A927569E9}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{034845A2-0C7A-4655-8CBD-A40A927569E9}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
